--- a/_pgbackup/assets/css/style_1684078277.css
+++ b/_pgbackup/assets/css/style_1684078277.css
@@ -334,21 +334,9 @@
     text-align: center;
 }
 
-.service-title-2 a {
-    font-size: 2.5em;
-}
-
-.service-title-3 a {
-    font-size: 2.5em;
-}
-
-.service-title-4 a {
-    font-size: 2.5em;
-}
-
-.service-title h3 {
-    font-size: 2.5em;
-    color: gold;
+h3.service-title-1 {
+    font-size: 1.5em;
+    font-weight: bold;
     text-align: center;
 }
 
@@ -360,6 +348,142 @@ h3.service-description-1 {
     font-weight: light;
     text-align: center;
     font-size: 1.1em;
+}
+
+.service-image-1 {
+    display: flex;
+    justify-content: center;
+    flex-basis: 30%;
+    align-self: stretch;
+    max-width: 70%;
+}
+
+.service-image-1 img {
+    max-width: 70%;
+}
+
+.service-title-2 a {
+    font-size: 2.5em;
+    color: #0F52BA;
+    text-align: center;
+}
+
+.service-title-2 a {
+    font-size: 2.5em;
+}
+
+h3.service-title-2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+
+h3.service-description-2 {
+    max-width: max-content;
+    align-self: center;
+    margin-top: 30px;
+    font-style: italic;
+    font-weight: light;
+    text-align: center;
+    font-size: 1.1em;
+}
+
+h3.service-description-22 {
+    max-width: max-content;
+    align-self: center;
+    margin-top: 5px;
+    font-style: italic;
+    font-weight: light;
+    text-align: center;
+    font-size: 1.1em;
+}
+
+.service-image-2 {
+    display: flex;
+    justify-content: center;
+    flex-basis: 30%;
+    align-self: stretch;
+    max-width: 70%;
+}
+
+.service-image-2 img {
+    max-width: 70%;
+}
+
+.service-title-3 a {
+    font-size: 2.5em;
+    color: #ff0048;
+    text-align: center;
+}
+
+.service-title-3 a {
+    font-size: 2.5em;
+}
+
+h3.service-title-3 {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+
+h3.service-description-3 {
+    max-width: max-content;
+    align-self: center;
+    margin-top: 30px;
+    font-style: italic;
+    font-weight: light;
+    text-align: center;
+    font-size: 1.1em;
+}
+
+.service-image-3 {
+    display: flex;
+    justify-content: center;
+    flex-basis: 30%;
+    align-self: stretch;
+    max-width: 70%;
+}
+
+.service-image-3 img {
+    max-width: 70%;
+}
+
+.service-title-4 a {
+    font-size: 2.5em;
+    color: #00ff6c;
+    text-align: center;
+}
+
+.service-title-4 a {
+    font-size: 2.5em;
+}
+
+h3.service-title-4 {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+}
+
+h3.service-description-4 {
+    max-width: max-content;
+    align-self: center;
+    margin-top: 30px;
+    font-style: italic;
+    font-weight: light;
+    text-align: center;
+    font-size: 1.1em;
+}
+
+.service-image-4 {
+    display: flex;
+    justify-content: center;
+    flex-basis: 30%;
+    align-self: stretch;
+    max-width: 70%;
+}
+
+.service-image-4 img {
+    max-width: 70%;
 }
 
 /* -----------------------------------*\
@@ -899,7 +1023,7 @@ body {
 
 .service-card,
 .service .link-card {
-    padding: 80px;
+    padding: 40px;
     border-radius: var(--radius-20);
 }
 
@@ -924,13 +1048,14 @@ body {
     max-width: max-content;
     padding: 15px;
     border-radius: var(--radius-8);
-    background-color: hsla(var(--color), 0.15);
+
+    /* background-color: hsla(var(--color), 0.15); */
     margin-block-end: 25px;
     transition: var(--transition-2);
 }
 
 .service-card:is(:hover, :focus-within) .card-icon {
-    transform: rotateY(0.5turn);
+    transform: rotateY(1turn);
 }
 
 .service-card .card-title {
