--- a/_pgbackup/assets/css/style_1684332030.css
+++ b/_pgbackup/assets/css/style_1684332030.css
@@ -376,7 +376,7 @@ h3.service-description-1 {
 }
 
 .service-title-2 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 h3.service-title-2 {
@@ -418,7 +418,7 @@ h3.service-description-22 {
 }
 
 .service-title-3 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
     color: #ff0048;
     text-align: center;
 }
@@ -456,7 +456,7 @@ h3.service-description-3 {
 }
 
 .service-title-4 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
     color: #00ff6c;
     text-align: center;
 }
@@ -1504,41 +1504,9 @@ body {
 /* -----------------------------------*\
   #MEDIA QUERIES
 \*----------------------------------- */
-@media (min-width: 320px) {
-    .onlyrocket {
-        margin: 55vw 2vw 2vw 32vw;
-    }
-
-    .rocket {
-        width: 24vw;
-        transform: rotate(30deg);
-    }
-
-    .rocketfire {
-        margin: 105vw 2vw 2vw 22vw;
-    }
-
-    .rocketfire2 {
-        margin: 110vw 2vw 2vw 32vw;
-    }
-
-    .rocketfire3 {
-        margin: 108vw 2vw 2vw 28vw;
-    }
-
-    .lune {
-        margin: 30vw 20vw 20vw 10vw;
-        width: 20vw;
-    }
-
-    card-title {
-        font-size: 0.5vw;
-    }
-}
-
 /* *
  * responsive for large than 575px screen */
-@media (min-width: 575px) {
+@media (min-width: 175px) {
     /* *
    * REUSED STYLE */
     .container {
@@ -1570,6 +1538,65 @@ body {
 
     .project-card .card-title {
         margin-block-end: 10px;
+    }
+
+    .onlyrocket {
+        margin: 55vw 2vw 2vw 32vw;
+    }
+
+    .rocket {
+        width: 24vw;
+        transform: rotate(30deg);
+    }
+
+    .rocketfire {
+        margin: 105vw 2vw 2vw 22vw;
+    }
+
+    .rocketfire2 {
+        margin: 110vw 2vw 2vw 32vw;
+    }
+
+    .rocketfire3 {
+        margin: 108vw 2vw 2vw 28vw;
+    }
+
+    .lune {
+        margin: 30vw 20vw 20vw 10vw;
+        width: 20vw;
+    }
+
+    .service-card {
+        display: block;
+    }
+
+    .card-icon {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .feature-list {
+        text-align: center;
+    }
+
+    .h2.section-title {
+        text-align: center;
+    }
+
+    .service-title-1 a {
+        font-size: 1.5em;
+    }
+
+    .service-title-2 a {
+        font-size: 1.5em;
+    }
+
+    .service-title-3 a {
+        font-size: 1.5em;
+    }
+
+    .service-title-4 a {
+        font-size: 1.5em;
     }
 }
 
@@ -1721,6 +1748,32 @@ body {
 
     .footer-bottom-list {
         justify-content: center;
+    }
+
+    .onlyrocket {
+        margin: 40vw 2vw 2vw 32vw;
+    }
+
+    .rocket {
+        width: 20vw;
+        transform: rotate(30deg);
+    }
+
+    .rocketfire {
+        margin: 85vw 2vw 2vw 22vw;
+    }
+
+    .rocketfire2 {
+        margin: 88vw 2vw 2vw 32vw;
+    }
+
+    .rocketfire3 {
+        margin: 85vw 2vw 2vw 27vw;
+    }
+
+    .lune {
+        margin: 20vw 20vw 20vw 10vw;
+        width: 20vw;
     }
 }
 
@@ -2007,8 +2060,30 @@ body {
     .blog-card .card-title {
         --fs-4: 2.4rem;
     }
-}
 
-}
+    .service-card {
+        display: flex;
+    }
 
+    .lune {
+        margin: 15vw 20vw 20vw 10vw;
+        width: 12vw;
+    }
+
+    .rocket {
+        width: 17vw;
+        transform: rotate(40deg);
+    }
+
+    .rocketfire {
+        margin: 60vw 2vw 2vw 20vw;
+    }
+
+    .rocketfire2 {
+        margin: 66vw 2vw 2vw 28vw;
+    }
+
+    .rocketfire3 {
+        margin: 62vw 2vw 2vw 25vw;
+    }
 }
