--- a/_pgbackup/assets/css/style_1684332189.css
+++ b/_pgbackup/assets/css/style_1684332189.css
@@ -1,22 +1,22 @@
 /* -----------------------------------*\
-  #style.css
+#style.css
 \*----------------------------------- */
 /* *
- * copyright 2022 codewithsadee */
+* copyright 2022 codewithsadee */
 /* -----------------------------------*\
-  #CUSTOM PROPERTY
+#CUSTOM PROPERTY
 \*----------------------------------- */
 @font-face {
     font-family: 'moonlight';
     src: url('../fonts/moon_light-webfont.woff2') format('woff2'),
-         url('../fonts/moon_light-webfont.woff') format('woff');
+        url('../fonts/moon_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 :root {
     /* *
-   * colors */
+    * colors */
     --sky-blue-crayola: hsl(188, 64%, 60%);
     --raisin-black_90: hsla(240, 8%, 12%, 0.9);
     --raisin-black-1: hsl(240, 8%, 17%);
@@ -37,11 +37,11 @@
     --jet: hsl(0, 0%, 21%);
 
     /* *
-   * gradient */
+    * gradient */
     --gradient: radial-gradient(ellipse at center, hsla(0, 0%, 0%, 0.25), transparent 80%);
 
     /* *
-   * typography */
+    * typography */
     --ff-dm-sans: 'DM Sans', sans-serif;
     --fs-1: 4rem;
     --fs-2: 3.5rem;
@@ -56,11 +56,11 @@
     --fw-700: 700;
 
     /* *
-   * spacing */
+    * spacing */
     --section-padding: 100px;
 
     /* *
-   * shadow */
+    * shadow */
     --shadow-1: 0px 2px 50px hsla(223, 40%, 76%, 0.3);
     --shadow-2: 0px -2px 12px hsl(252, 29%, 93%);
     --shadow-3: 0px 4px 4px hsla(231, 20%, 49%, 0.06);
@@ -68,14 +68,14 @@
     --shadow-5: 0px 15px hsla(241, 62%, 34%, 0.04);
 
     /* *
-   * radius */
+    * radius */
     --radius-8: 8px;
     --radius-10: 10px;
     --radius-15: 15px;
     --radius-20: 20px;
 
     /* *
-   * transition */
+    * transition */
     --transition-1: 0.25s ease;
     --transition-2: 0.5s ease;
     --cubic-in: cubic-bezier(0.51, 0.03, 0.64, 0.28);
@@ -174,7 +174,7 @@
 }
 
 /* -----------------------------------*\
-  #FLAME
+#FLAME
 \*----------------------------------- */
 .rocketandfire {
     position: relative;
@@ -336,7 +336,7 @@
 }
 
 .service-title-1 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
     color: gold;
     text-align: center;
 }
@@ -376,7 +376,7 @@ h3.service-description-1 {
 }
 
 .service-title-2 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 h3.service-title-2 {
@@ -418,13 +418,13 @@ h3.service-description-22 {
 }
 
 .service-title-3 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
     color: #ff0048;
     text-align: center;
 }
 
 .service-title-3 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 h3.service-title-3 {
@@ -456,13 +456,13 @@ h3.service-description-3 {
 }
 
 .service-title-4 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
     color: #00ff6c;
     text-align: center;
 }
 
 .service-title-4 a {
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 h3.service-title-4 {
@@ -498,7 +498,7 @@ h3.service-description-4 {
 }
 
 /* -----------------------------------*\
-  #RESET
+#RESET
 \*----------------------------------- */
 *,
 *::before,
@@ -583,7 +583,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #REUSED STYLE
+#REUSED STYLE
 \*----------------------------------- */
 .container {
     padding-inline: 15px;
@@ -838,7 +838,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #HEADER
+#HEADER
 \*----------------------------------- */
 .header .btn {
     display: none;
@@ -955,7 +955,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #HERO
+#HERO
 \*----------------------------------- */
 .hero {
     padding-block-start: calc(var(--section-padding) + 60px);
@@ -1024,7 +1024,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #SERVICE
+#SERVICE
 \*----------------------------------- */
 .service {
     background-color: #111222;
@@ -1109,7 +1109,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #FEATURE
+#FEATURE
 \*----------------------------------- */
 .feature .container,
 .feature-list {
@@ -1147,7 +1147,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #PROJECT
+#PROJECT
 \*----------------------------------- */
 .project {
     background-color: var(--ghost-white);
@@ -1226,7 +1226,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #NEWSLETTER
+#NEWSLETTER
 \*----------------------------------- */
 .newsletter {
     color: var(--white);
@@ -1273,7 +1273,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #BLOG
+#BLOG
 \*----------------------------------- */
 .blog {
     background-color: #111222;
@@ -1366,7 +1366,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #FOOTER
+#FOOTER
 \*----------------------------------- */
 .footer {
     background-color: var(--raisin-black-1);
@@ -1470,7 +1470,7 @@ body {
 }
 
 /* -----------------------------------*\
-  #BACK TO TOP
+#BACK TO TOP
 \*----------------------------------- */
 .back-top-btn {
     position: fixed;
@@ -1502,9 +1502,44 @@ body {
 }
 
 /* -----------------------------------*\
-  #MEDIA QUERIES
+#MEDIA QUERIES
 \*----------------------------------- */
-@media (min-width: 24px) {
+/* *
+* responsive for large than 575px screen */
+@media (min-width: 175px) {
+    /* *
+    * REUSED STYLE */
+    .container {
+        max-width: 540px;
+        width: 100%;
+        margin-inline: auto;
+    }
+
+    /* *
+    * HEADER */
+    .header .container {
+        max-width: unset;
+    }
+
+    /* *
+    * PROJECT */
+    .project-card .card-content {
+        max-width: max-content;
+        width: calc(100% - 40px);
+        left: 50%;
+        right: auto;
+        padding: 50px 80px;
+        transform: translate(-50%, calc(-50% + 20px));
+    }
+
+    .project-card:is(:hover, :focus-within) .card-content {
+        transform: translate(-50%, -50%);
+    }
+
+    .project-card .card-title {
+        margin-block-end: 10px;
+    }
+
     .onlyrocket {
         margin: 55vw 2vw 2vw 32vw;
     }
@@ -1534,64 +1569,56 @@ body {
     .service-card {
         display: block;
     }
-}
 
-/* *
- * responsive for large than 575px screen */
-@media (min-width: 575px) {
-    /* *
-   * REUSED STYLE */
-    .container {
-        max-width: 540px;
-        width: 100%;
-        margin-inline: auto;
+    .card-icon {
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    /* *
-   * HEADER */
-    .header .container {
-        max-width: unset;
+    .feature-list {
+        text-align: center;
     }
 
-    /* *
-   * PROJECT */
-    .project-card .card-content {
-        max-width: max-content;
-        width: calc(100% - 40px);
-        left: 50%;
-        right: auto;
-        padding: 50px 80px;
-        transform: translate(-50%, calc(-50% + 20px));
+    .h2.section-title {
+        text-align: center;
     }
 
-    .project-card:is(:hover, :focus-within) .card-content {
-        transform: translate(-50%, -50%);
+    .service-title-1 a {
+        font-size: 1.5em;
     }
 
-    .project-card .card-title {
-        margin-block-end: 10px;
+    .service-title-2 a {
+        font-size: 1.5em;
+    }
+
+    .service-title-3 a {
+        font-size: 1.5em;
+    }
+
+    .service-title-4 a {
+        font-size: 1.5em;
     }
 }
 
 /* *
- * responsive for large than 768px screen */
+* responsive for large than 768px screen */
 @media (min-width: 768px) {
     /* *
-   * CUSTOM PROPERTY */
+    * CUSTOM PROPERTY */
     :root {
         /* *
-     * typography */
+        * typography */
         --fs-1: 5.5rem;
         --fs-2: 3.8rem;
         --fs-7: 1.8rem;
 
         /* *
-     * spacing */
+        * spacing */
         --section-padding: 120px;
     }
 
     /* *
-   * REUSED STYLE */
+    * REUSED STYLE */
     .container {
         max-width: 720px;
     }
@@ -1605,7 +1632,7 @@ body {
     }
 
     /* *
-   * HERO */
+    * HERO */
     .hero .container {
         gap: 120px;
     }
@@ -1643,7 +1670,7 @@ body {
     }
 
     /* *
-   * FEATURE */
+    * FEATURE */
     .feature-banner {
         max-width: max-content;
     }
@@ -1668,13 +1695,13 @@ body {
     }
 
     /* *
-   * PROJECT */
+    * PROJECT */
     .project .grid-list > li:first-child {
         grid-column: 1 / 3;
     }
 
     /* *
-   * NEWSLETTER */
+    * NEWSLETTER */
     .newsletter-form {
         position: relative;
     }
@@ -1693,7 +1720,7 @@ body {
     }
 
     /* *
-   * BLOG */
+    * BLOG */
     .blog-card:not(.large) {
         display: flex;
         align-items: center;
@@ -1710,7 +1737,7 @@ body {
     }
 
     /* *
-   * FOOTER */
+    * FOOTER */
     .footer-top {
         grid-template-columns: 1fr 1fr;
     }
@@ -1722,13 +1749,39 @@ body {
     .footer-bottom-list {
         justify-content: center;
     }
+
+    .onlyrocket {
+        margin: 40vw 2vw 2vw 32vw;
+    }
+
+    .rocket {
+        width: 20vw;
+        transform: rotate(30deg);
+    }
+
+    .rocketfire {
+        margin: 85vw 2vw 2vw 22vw;
+    }
+
+    .rocketfire2 {
+        margin: 88vw 2vw 2vw 32vw;
+    }
+
+    .rocketfire3 {
+        margin: 85vw 2vw 2vw 27vw;
+    }
+
+    .lune {
+        margin: 20vw 20vw 20vw 10vw;
+        width: 20vw;
+    }
 }
 
 /* *
- * responsive for large than 992px screen */
+* responsive for large than 992px screen */
 @media (min-width: 992px) {
     /* *
-   * REUSED STYLE */
+    * REUSED STYLE */
     .container {
         max-width: 960px;
     }
@@ -1742,10 +1795,10 @@ body {
     }
 
     /* *
-   * HEADER
+    * HEADER
     .header {
-        padding-block-start: 47px;
-    } */
+    padding-block-start: 47px;
+} */
     .nav-open-btn,
     .overlay,
     .navbar .wrapper {
@@ -1808,7 +1861,7 @@ body {
     }
 
     /* *
-   * HERO */
+    * HERO */
     .hero {
         background-image: linear-gradient(to right, var(--white) 79%, var(--mustard) 79%);
         overflow: hidden;
@@ -1833,21 +1886,21 @@ body {
     }
 
     /* *
-   * FEATURE */
+    * FEATURE */
     .feature .container {
         grid-template-columns: 1fr 1fr;
         gap: 30px;
     }
 
     /* *
-   * PROJECT */
+    * PROJECT */
     .filter-btn {
         --fs-9: 1.8rem;
         padding: 20px 25px;
     }
 
     /* *
-   * NEWSLETTER */
+    * NEWSLETTER */
     .newsletter .container {
         grid-template-columns: 1fr 0.8fr;
         align-items: center;
@@ -1870,7 +1923,7 @@ body {
     }
 
     /* *
-   * BLOG */
+    * BLOG */
     .blog-list {
         grid-template-columns: 1fr 1fr;
         gap: 40px 70px;
@@ -1897,7 +1950,7 @@ body {
     }
 
     /* *
-   * FOOTER */
+    * FOOTER */
     .footer-top {
         grid-template-columns: 1fr 0.5fr 0.5fr 0.9fr;
         padding-block: 120px;
@@ -1915,19 +1968,19 @@ body {
 }
 
 /* *
- * responsive for large than 1200px screen */
+* responsive for large than 1200px screen */
 @media (min-width: 1200px) {
     /* *
-   * CUSTOM PROPERTY */
+    * CUSTOM PROPERTY */
     :root {
         /* *
-     * typography */
+        * typography */
         --fs-1: 5.5rem;
         --fs-2: 4.5rem;
     }
 
     /* *
-   * REUSED STYLE */
+    * REUSED STYLE */
     .container {
         max-width: 1140px;
     }
@@ -1938,7 +1991,7 @@ body {
     }
 
     /* *
-   * HEADER */
+    * HEADER */
     .header .container {
         padding-inline: 30px;
     }
@@ -1948,7 +2001,7 @@ body {
     }
 
     /* *
-   * HERO */
+    * HERO */
     .hero-content {
         display: flex;
         flex-direction: column;
@@ -1969,7 +2022,7 @@ body {
     }
 
     /* *
-   * SERVICE */
+    * SERVICE */
     .service .grid-list {
         grid-template-columns: repeat(4, 1fr);
     }
@@ -1979,13 +2032,13 @@ body {
     }
 
     /* *
-   * PROJECT */
+    * PROJECT */
     .filter-btn {
         padding-inline: 40px;
     }
 
     /* *
-   * BLOG */
+    * BLOG */
     .blog-list {
         column-gap: 35px;
     }
@@ -2007,8 +2060,34 @@ body {
     .blog-card .card-title {
         --fs-4: 2.4rem;
     }
-}
 
-}
+    .service-card {
+        display: flex;
+    }
 
+    .lune {
+        margin: 15vw 20vw 20vw 10vw;
+        width: 12vw;
+    }
+
+    .onlyrocket {
+        margin: 18vw 2vw 2vw 40vw;
+    }
+
+    .rocket {
+        width: 17vw;
+        transform: rotate(40deg);
+    }
+
+    .rocketfire {
+        margin: 60vw 2vw 2vw 20vw;
+    }
+
+    .rocketfire2 {
+        margin: 66vw 2vw 2vw 28vw;
+    }
+
+    .rocketfire3 {
+        margin: 62vw 2vw 2vw 25vw;
+    }
 }
