--- a/_pgbackup/assets/css/style_1698244296.css
+++ b/_pgbackup/assets/css/style_1698244296.css
@@ -117,9 +117,9 @@
     font-weight: bold;
     color: white;
     position: absolute;
-    top: 18vw;
-    left: 27vw;
-    background: -webkit-linear-gradient(90deg, rgba(0,245,153,1) 0%, rgba(0,165,237,1) 100%);
+    top: 20vw;
+    left: 25vw;
+    background: -webkit-linear-gradient(90deg, rgba(62,27,127,255) 0%, rgba(255,199,255,255) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: 2;
@@ -1602,6 +1602,18 @@ body {
     .title {
         top: 27vw;
     }
+
+    .on {
+        top: 38vw;
+    }
+
+    .xodexx {
+        top: 37vw;
+    }
+
+    .xodex {
+        top: 37vw;
+    }
 }
 
 /* *
@@ -1778,6 +1790,22 @@ body {
     .lune {
         margin: 20vw 20vw 20vw 10vw;
         width: 20vw;
+    }
+
+    .title {
+        top: 17vw;
+    }
+
+    .on {
+        top: 28vw;
+    }
+
+    .xodexx {
+        top: 27vw;
+    }
+
+    .xodex {
+        top: 27vw;
     }
 }
 
@@ -2093,6 +2121,22 @@ body {
 
     .rocketfire3 {
         margin: 57vw 2vw 2vw 33vw;
+    }
+
+    .title {
+        top: 7vw;
+    }
+
+    .on {
+        top: 18vw;
+    }
+
+    .xodexx {
+        top: 17vw;
+    }
+
+    .xodex {
+        top: 17vw;
     }
 }
 
