--- a/_pgbackup/assets/css/style_1698246064.css
+++ b/_pgbackup/assets/css/style_1698246064.css
@@ -117,9 +117,23 @@
     font-weight: bold;
     color: white;
     position: absolute;
-    top: 18vw;
-    left: 27vw;
-    background: -webkit-linear-gradient(90deg, rgba(0,245,153,1) 0%, rgba(0,165,237,1) 100%);
+    top: 15vw;
+    left: 20vw;
+    background: -webkit-linear-gradient(90deg, rgba(62,27,127,255) 0%, rgba(226,119,204,255) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: 2;
+}
+
+.xodex::first-letter {
+    font-family: Moon;
+    font-size: 14vw;
+    font-weight: bold;
+    color: white;
+    position: absolute;
+    top: 20vw;
+    left: 20vw;
+    background: -webkit-linear-gradient(90deg, rgba(62,27,127,255) 0%, rgba(226,119,204,255) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: 2;
@@ -1604,11 +1618,15 @@ body {
     }
 
     .on {
-        top: 28vw;
+        top: 38vw;
     }
 
     .xodexx {
-        top: 27vw;
+        top: 37vw;
+    }
+
+    .xodex {
+        top: 37vw;
     }
 }
 
@@ -1787,6 +1805,25 @@ body {
         margin: 20vw 20vw 20vw 10vw;
         width: 20vw;
     }
+
+    .title {
+        top: 17vw;
+    }
+
+    .on {
+        top: 28vw;
+    }
+
+    .xodexx {
+        top: 30vw;
+        width: 10vw;
+        left: 19vw;
+    }
+}
+
+.xodex {
+    top: 23.3vw;
+    left: 18.8vw;
 }
 
 /* *
@@ -2102,6 +2139,25 @@ body {
     .rocketfire3 {
         margin: 57vw 2vw 2vw 33vw;
     }
+
+    .title {
+        top: 7vw;
+    }
+
+    .on {
+        top: 18vw;
+    }
+
+    .xodexx {
+        top: 20vw;
+        width: 10vw;
+        left: 19vw;
+    }
+
+    .xodex {
+        top: 13vw;
+        left: 19vw;
+    }
 }
 
 /* *
@@ -2131,5 +2187,7 @@ body {
 
     .rocketfire3 {
         margin: 41vw 2vw 2vw 48vw;
+    }
+}
     }
 }
